--- a/plugins/ProSkillAPI/skills/monk/monk_unarmored_defense.yml
+++ b/plugins/ProSkillAPI/skills/monk/monk_unarmored_defense.yml
@@ -1,40 +1,19 @@
-# Skill: Defesa sem Armadura (Monge)
+# Passiva: Defesa sem Armadura
 name: monk_unarmored_defense
-display: "§7Disciplina Desarmada"
+display: "§6Defesa sem Armadura"
 icon: LEATHER_CHESTPLATE
 type: Passive
 max-level: 1
 description:
-  - "§7Converte destreza e sabedoria em mitigação moderada ao lutar sem armadura pesada."
-  - "§7Aplica até +12% redução combinada, respeitando limite global de 45%."
+  - "§7Concede mitigação leve baseada em Destreza e Sabedoria quando sem armadura pesada."
+  - "§8Cap de mitigação respeita o limite global de 45% considerando Postura e efeitos raciais."
 components:
-  EquipCheck:
+  Passive:
     type: trigger
-    data:
-      slot: armor
-      allowed:
-        - LEATHER
-        - CHAIN
-        - NONE
+    data: {}
     children:
-      ApplyDefense:
+      ApplyFormula:
         type: mechanic
         data:
-          potion: DAMAGE_RESISTANCE
-          seconds-base: 6
-          seconds-scale: 0
-          amplifier-base: 0
-          amplifier-scale: 0
-      ApplyProjectileMitigation:
-        type: mechanic
-        data:
-          potion: RESISTANCE
-          seconds-base: 6
-          seconds-scale: 0
-          amplifier-base: 0
-          amplifier-scale: 0
-      Message:
-        type: mechanic
-        data:
-          message: "§7Sua postura defensiva se ajusta ao estilo desarmado."
-          targets: self
+          command: "skript run monk_unarmored_update %caster%"
+          silent: true
