--- a/plugins/ProSkillAPI/skills/monk/monk_flurry_of_blows.yml
+++ b/plugins/ProSkillAPI/skills/monk/monk_flurry_of_blows.yml
@@ -1,4 +1,4 @@
-# Skill: Rajada de Golpes (classe base)
+# Skill: Rajada de Golpes (base)
 name: monk_flurry_of_blows
 display: "§eRajada de Golpes"
 icon: RABBIT_FOOT
@@ -7,53 +7,60 @@ max-level: 1
 attributes:
   cooldown-base: 45
   cooldown-scale: 0
+  range-base: 4
+  range-scale: 0
 description:
-  - "§7Consome 1 Ki para realizar 2 golpes extras em até 4s."
-  - "§eAplica +12% velocidade de ataque e dano corpo a corpo durante a janela."
-  - "§7Respeita limites raciais de velocidade através de retornos decrescentes."
+  - "§7Consome 1 carga de Ki para liberar até dois ataques adicionais em 3s."
+  - "§eCada ataque adicional causa 80% do dano corpo a corpo e conta para combos."
+  - "§7Skript controla a janela, prevenindo burst maior que o limite PvP."
 components:
   Cast:
     type: trigger
     data:
       cooldown: true
     children:
-      KiRequirement:
+      KiCheck:
         type: condition
         data:
-          key: ki_points
+          key: ki_charges
           min-value: 1
-          fail-message: "§cVocê precisa de Ki para usar Rajada de Golpes."
+          fail-message: "§cVocê precisa de Ki para Rajada de Golpes."
         children:
           ConsumeKi:
             type: mechanic
             data:
-              key: ki_points
+              key: ki_charges
               amount-base: 1
+              amount-scale: 0
               indicator: "§e-1 Ki"
-      ApplyHaste:
-        type: mechanic
+      Targeting:
+        type: target
         data:
-          potion: FAST_DIGGING
-          seconds-base: 4
-          seconds-scale: 0
-          amplifier-base: 1
-          amplifier-scale: 0
-          indicator: "§eRajada de Golpes"
-      ApplyDamageBuff:
-        type: mechanic
-        data:
-          potion: INCREASE_DAMAGE
-          seconds-base: 4
-          seconds-scale: 0
-          amplifier-base: 0
-          amplifier-scale: 0
+          shape: single
+          range-base: 4
+          range-scale: 0
+          group: enemy
+          caster: false
+        children:
+          Marker:
+            type: mechanic
+            data:
+              command: "skript run monk_flurry_window %caster% %target% 2 3 0.8"
+              silent: true
       Actionbar:
         type: mechanic
         data:
-          message: "§eRajada ativa! Execute dois golpes extras."
+          message: "§eRajada ativa — 3s para 2 golpes extras!"
           targets: self
-      ScoreboardRefresh:
+      Particles:
         type: mechanic
         data:
-          command: "placeholderapi parse me \"%skills_ki_points%\""
+          effect: SWEEP_ATTACK
+          radius-base: 2
+          particles-base: 12
+          arrangement: sphere
+      UpdateHUD:
+        type: mechanic
+        data:
+          command: "placeholderapi refresh %caster% monk_ki"
           silent: true
